--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=moduloseleccionrest
+
+# Configuración de la conexión a la base de datos Oracle
+spring.datasource.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
+spring.datasource.username=seleccionschema
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
